[package]
name = "rusty-keys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ecdsa = { version = "0.16.7", features = ["signing"] }
ed25519-dalek = "1.0.1"
elliptic-curve = "0.13.5"
generic-array = "0.14.7"
num-bigint = "0.4.3"
num_enum = "0.6.1"
p256 = { version = "0.13.2", features = ["ecdsa-core"] }
p384 = { version = "0.13.0", features = ["ecdsa-core"] }
signature = "2.1.0"
subtle = "2.5.0"
zeroize = { version = "1.6.0", features = ["derive"] }


[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
opt-level = "z"  # Optimize for size
