[package]
name = "dreadlocks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.11", features = ["derive"] }
dsa = "0.6.1"
ecdsa = { version = "0.16.7", features = ["signing"] }
ed25519-dalek = "1.0.1"
elliptic-curve = "0.13.5"
fork = "0.1.22"
generic-array = "0.14.7"
libc = "0.2.147"
nix = "0.26.2"
num-bigint = "0.4.3"
num_enum = "0.6.1"
p256 = { version = "0.13.2", features = ["ecdsa-core"] }
p384 = { version = "0.13.0", features = ["ecdsa-core"] }
rsa = { version = "0.9.2", features = ["sha2", "pkcs5"] }
sha1 = { version = "0.10.5", features = ["oid"] }
sha2 = { version = "0.10.7", features = ["oid"] }
signature = "2.1.0"
subtle = "2.5.0"
tempdir = "0.3.7"
zeroize = { version = "1.6.0", features = ["derive"] }


[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
opt-level = "z"  # Optimize for size
